<resources>
    <string name="app_name">TodoList</string>
    <string name="label_createTask">Create Tasks</string>
    <string name="label_title">Title</string>
    <string name="lable_description">Description</string>
    <string name="label_date">Date</string>
    <string name="label_hour">Hour</string>
    <string name="label_create_Task">Create Task</string>
    <string name="label_tasks">Tasks</string>
    <string name="label_description_new_task">New Task</string>
    <string name="label_description">Description</string>
    <string name="lable_edit">Editar</string>
    <string name="label_edit">Edit</string>
    <string name="label_delete">Delete</string>
    <string name="label_editTitle">Title</string>
    <string name="label_editDescription">Description</string>
    <string name="label_save">Save</string>
    <string name="lable_no_tasks">Ops, você ainda não \n possui nenhuma tarefa</string>
</resources>