<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- res/layout/activity_edit_task.xml -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/label_editTitle"
            android:layout_margin="10dp"
            android:inputType="text"
            android:autofillHints="Title"/>

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/label_editDescription"
            android:layout_margin="10dp"
            android:inputType="text"
            android:autofillHints="Description"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/label_save"
            android:textAllCaps="false"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>